Fix horizontal overflow issue

--- a/sass/utils/_reset.scss
+++ b/sass/utils/_reset.scss
@@ -104,6 +104,7 @@ meter {
 
 body,
 html {
+  overflow-x: hidden;
   min-width: 100vw;
   min-height: 100vh;
 }
